--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,31 @@
-<h1>Ben And Nicole</h1>
+<div id="bg_landing"></div>
 
-<%= link_to 'RSVP', controller: 'guests' %>
-<%= link_to 'About Us', controller: 'welcome', action: 'about' %>
-<%= link_to 'Meet the Bridal Party', controller: 'welcome', action: 'bridal_party' %>
-<%= link_to 'Wedding Logistics', controller: 'welcome', action: 'logistics' %>
+<div id='landing_box'>
+	<div id="title_landing">
+	<h1>Ben and Nicole</h1>
+	</div>
+	<div id='date'>
+	<h2>
+		<div class='mickey'>6</div>
+		<div class='mickey' style='font-size: .5em;'>&#2047</div>
+		<div class='mickey'>20</div>
+		<div class='mickey' style='font-size: .5em;'>&#2047</div>
+		<div class="mickey">15</div></h2>
+	</div>
+	<div id="countdown"></div>
+</div>
+
+
+
+<footer id='landing'>
+	<ul>
+		<li><%= link_to 'RSVP', controller: 'guests' %></li>
+		<li><%= link_to 'About Us', controller: 'welcome', action: 'about' %></li>
+		<li><%= link_to 'Meet the Bridal Party', controller: 'welcome', action: 'bridal_party' %></li>
+		<li><%= link_to 'Wedding Logistics', controller: 'welcome', action: 'logistics' %></li>
+	</ul>
+	
+	
+	
+	
+</footer>
