--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,3 +1,34 @@
-<h1>about</h1>
+<div id="bg_about_us">
+	
+</div>
+<div id="black_overlay"></div>
+		<div class='about_home_link' >
+		<%= link_to 'Home', controller: 'welcome', action: 'index'%>
+		</div>
 
-<%= link_to 'home', controller: 'welcome', action: 'index' %>
+<div class="about_pic">
+	<%= image_tag("wedding_party.JPG") %>
+</div>
+<div class="about_content_con">
+	<div class="about_content">
+		<h1 style="font-family: Waltograph; font-size: 3em; text-align:center; border-bottom: 1px solid white;">Meet the Fishers</h1>
+		<p>
+			Have you seen those Match.com commercials on T.V? Well you’re looking at one of those lucky couples. Ben came into my life on Friday, September 13th for our first date at Yogurtland.  From our first date, I knew this guy was special. From having the same yogurt toppings (Reeses, cookie dough, and Oreo bites) to having the same love of Chipotle ( guacamole please), we were definitely made a perfect match. As we continued to date, I started to fall for him more and more.  I had finally found my best friend who I could talk to about anything. I found someone who understood me; where I didn’t have to say anything and would know what I was thinking. I found someone who I could be my goofy, dessert-loving, Disney –crazed self and who would be the same way with me. I finally had found the man of my dreams.
+			 <br>
+			 <br>
+			For our third date, we went to Umami Burger in Laguna Beach on September 21st. After lunch, we walked to the beach where we sat and watched the sunset. Ben had asked me if I wanted to make things official but falling for him so fast, I thought it was too soon and wanted to take things slow. A week later, I met Ben at Crean Lutheran (Ben’s highschool he teaches at) to go running around Irvine. I realized that this guy was perfect for me and I didn’t want to lose him. As we started running, I stopped Ben and said “Do you want to make it official?” September 28th marked the day of what is now Ben and Nicole.
+			 <br>
+			 <br>
+			 
+			After a couple of dates later, I was falling in love with Ben. We had been planning a trip to Laguna beach to stargaze. As I laid there, I looked over at Ben and thought to myself, I really love this man. I had never been in love and had never told anyone before that I loved them. I wanted to wait for the “perfect” time to tell him and I knew that this was the night. After stargazing at the beach, we decided to go back to Crean and sit in the football stadium where we spent many nights talking and stargazing with each other. As we sat there, I also told him that if he were to ever tell me a secret, to tell me in my left ear since I have had extreme hearing loss since I was born in my right ear.  Ben leaned in and whispered in my left ear, “ A secret like this.. I love you”. I started crying and at that time I had finally told the man of my dreams that I loved him.  
+			 <br>
+			 <br>
+			 
+			From that moment on, I have continued to fall more in love with Ben each and every moment of every day. I am eternally blessed to have this man in my life who has made me the happiest I have ever been in my entire life. I have never laughed so much and never felt so loved by anyone before. I am so honored and proud to be called his wife on June 20th.  I cannot wait to spend the rest of my life with Ben and cannot wait to see what married life will bring us.
+			<br>
+			 <br>
+		</p>
+	</div>
+</div>
+
+
