--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -1,3 +1,12 @@
-<h1>bridal party</h1>
-
+<div id="bg_wedding_party"></div>
+<div id="wedding_party">
+<h1>The Wedding Party</h1>
+</div>
+<div class='wedding_party_home_link'>
 <%= link_to 'home', controller: 'welcome', action: 'index' %>
+</div>
+
+<div class="groomsmen">
+</div>
+<div class="bridal_party">
+</div>
