--- a/app/views/welcome/bridal_party.html.erb
+++ b/app/views/welcome/bridal_party.html.erb
@@ -10,3 +10,26 @@
 </div>
 <div class="bridal_party">
 </div>
+
+<script type="text/javascript">
+	
+	    function appendWeddingPartyContainers (){
+	        
+	        var names = ['jo', 'blow', 'lo']
+
+	        function weddingPartyContainers(name){
+	            return '<div class="wpContainers"> \
+	                    <h1>'+name+'</h1>\
+	                    </div>'
+	        }
+
+	        for(var i=0; i < names.length; i++){
+	            $('.bridal_party').append(weddingPartyContainers(names[i]))
+	            $('.groomsmen').append(weddingPartyContainers(names[i]))
+	        }
+	    }
+
+	appendWeddingPartyContainers()
+
+
+</script>
