--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,11 +21,46 @@
 	<ul>
 		<li><%= link_to 'RSVP', controller: 'guests' %></li>
 		<li><%= link_to 'About Us', controller: 'welcome', action: 'about' %></li>
-		<li><%= link_to 'Meet the Bridal Party', controller: 'welcome', action: 'bridal_party' %></li>
+		<li><%= link_to 'Meet the Wedding Party', controller: 'welcome', action: 'bridal_party' %></li>
 		<li><%= link_to 'Wedding Logistics', controller: 'welcome', action: 'logistics' %></li>
+		<li><%= link_to 'Gallery', controller: 'welcome', action: 'gallery' %></li>
 	</ul>
 	
 	
 	
 	
 </footer>
+
+<script type="text/javascript">
+	function countdown(){
+	    var target_date = new Date("Jun 20, 2015").getTime(),
+	        countdown = document.getElementById("countdown"),
+	        days, 
+	        hours, 
+	        minutes, 
+	        seconds;
+	     
+	     
+	    setInterval(function () {
+	     
+	        var current_date = new Date().getTime();
+	        var seconds_left = (target_date - current_date) / 1000;
+	     
+	        days = parseInt(seconds_left / 86400);
+	        seconds_left = seconds_left % 86400;
+	         
+	        hours = parseInt(seconds_left / 3600);
+	        seconds_left = seconds_left % 3600;
+	         
+	        minutes = parseInt(seconds_left / 60);
+	        seconds = parseInt(seconds_left % 60);
+	         
+	        countdown.innerHTML = days + "days " + hours + "hours "
+	        + minutes + "mins " + seconds + "sec";  
+	     
+	    }, 1000);
+
+	}
+
+	countdown()
+</script>
