--- a/app/views/welcome/logistics.html.erb
+++ b/app/views/welcome/logistics.html.erb
@@ -1,3 +1,9 @@
-<h1>logistics</h1>
-
+<div id="bg_wedding_details"></div>
+<div class="logistics_home_link" >
 <%= link_to 'home', controller: 'welcome', action: 'index' %>
+</div>
+
+<div id="logistics" style="border: 1px solid transparent;">
+<h1>Logistics</h1>
+</div>
+
