--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -15,7 +15,7 @@
 	overflow: hidden;
 }*/
 
-#bg_landing, #bg_about_us, #bg_wedding_party {
+#bg_landing, #bg_about_us, #bg_wedding_party, #bg_wedding_details, .bg_rsvp, #bg_gallery {
 	background-image: url('landing.JPG');
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -31,6 +31,21 @@
 	background-image: url('yogurtland.jpg');
 }
 
+#bg_gallery {
+	background-image: none;
+	background-color: black;
+}
+
+.bg_rsvp {
+	background-image: url('rsvp.JPG');
+	background-position: center;
+}
+
+#bg_wedding_details {
+	background-image: url('wedding_details.JPG');
+	background-position: center;
+}
+
 #bg_wedding_party {
 	position: fixed;
 	background-image: url('aboutus.JPG');
@@ -42,7 +57,7 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
-	background-color: rgba(0,0,0,.5);
+	background-color: rgba(0,0,0,.7);
 
 }
 
@@ -57,7 +72,7 @@
 
 }
 
-.about_home_link {
+.about_home_link, .logistics_home_link {
 	position: fixed;
 	font-family: 'Waltograph';
 	margin-top: 15px;
@@ -65,7 +80,7 @@
 	z-index: 10;
 }
 
-.about_home_link a {
+.about_home_link a, .logistics_home_link a {
 	text-decoration: none;
 	color: black;
 	text-shadow:
@@ -133,10 +148,10 @@
 #landing ul {
 	list-style: none;
 	overflow: hidden;
-	width: 700px;
+	width: 900px;
 	position: absolute;
 	left: 50%;
-	margin-left: -370px;
+	margin-left: -470px;
 
 }
 
@@ -188,6 +203,8 @@
 	/*font-family: 'Codystar', cursive;*/
 	font-family: 'Waltograph';
 	margin: 0;
+    min-height: 100px;
+    line-height: 100px;
 }
 
 #date {
@@ -229,7 +246,7 @@
     1px -1px 0 #000,
     -1px 1px 0 #000,
     1px 1px 0 #000;  
-	width: 600px;
+	width: 100%;
 	font-size: 3.5em;
 	text-align: center;
 	position: absolute;
@@ -241,9 +258,23 @@
 	line-height: 90px;
 }
 
-#wedding_party  {
+#wedding_party , #logistics, #gallery_title {
 	width: 100%;
 	text-align: center;
+}
+
+#gallery_title h1 {
+	color: white;
+	font-family: 'Waltograph';
+	font-size: 5.5em;
+	text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;  
+    min-height: 100px;
+    line-height: 100px;
+    
 }
 
 #wedding_party h1 {
@@ -255,6 +286,8 @@
     1px -1px 0 #fff,
     -1px 1px 0 #fff,
     1px 1px 0 #fff;  
+    min-height: 100px;
+    line-height: 100px;
 }
 
 .wedding_party_home_link {
@@ -276,6 +309,30 @@
 	font-size: 3em;
 
 }
+.gallery_home_link {
+	position: fixed;
+	font-family: 'Waltograph';
+	left: 25px;
+	top: 25px;
+	z-index: 10;
+	line-height: 35px;
+}
+
+.gallery_home_link a {
+	text-decoration: none;
+	color: white;
+	text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;  
+	font-size: 3em;
+
+}
+
+
+
+
 
 .bridal_party, .groomsmen {
 	width: 50%;
@@ -293,5 +350,14 @@
 	background-color: blue;
 }
 
-
+#logistics {
+	font-family: 'Waltograph';
+	font-size: 3em;
+	text-shadow:
+    -1px -1px 0 #fff,
+    1px -1px 0 #fff,
+    -1px 1px 0 #fff,
+    1px 1px 0 #fff;  
+	font-size: 3em;
+}
 
