--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,7 +19,7 @@
 
 <footer id='landing'>
 	<ul>
-		<li><%= link_to 'RSVP', controller: 'guests' %></li>
+		<li><%= link_to 'RSVP', controller: 'guests', action: 'new' %></li>
 		<li><%= link_to 'About Us', controller: 'welcome', action: 'about' %></li>
 		<li><%= link_to 'Meet the Wedding Party', controller: 'welcome', action: 'bridal_party' %></li>
 		<li><%= link_to 'Wedding Logistics', controller: 'welcome', action: 'logistics' %></li>
