--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -7,65 +7,65 @@
 <div id="enter_code">
 
 	<div class="form">
-	<h1>Enter the Code on the back of the Save the Date card to RSVP</h1>
-	<%= form_tag('/guests/code_check', id: 'code_form') do %>
-		
-		<p>
-	    Super Secret Password:
-	    <%= text_field_tag :code, nil, :class => 'enter_code_tag' %>
-	    <%= submit_tag 'Enter', :class => 'code_submit' %>
-	  </p>
-
-	<% end %>
-
-	<div id="form_error">
-		<h1>You were invited right? Try again &#2047 </h1>
-	</div>
-
-	</div>
-
-</div>
-
-
-<div id="form_response">
-
-	<div id="form_rsvp">
-			<%= form_for :guest, url: guests_path do |f| %>
-		  <p>
-		    <%= f.label :first_name %><br>
-		    <%= f.text_field :first_name %>
-		  </p>
-		 
-		  <p>
-		    <%= f.label :last_name %><br>
-		    <%= f.text_field :last_name %>
+		<h1>Enter the Code on the back of the Save the Date card to RSVP</h1>
+		<%= form_tag('/guests/code_check', id: 'code_form') do %>
+			
+			<p>
+		    Super Secret Password:
+		    <%= text_field_tag :code, nil, :class => 'enter_code_tag' %>
+		    <%= submit_tag 'Enter', :class => 'code_submit' %>
 		  </p>
 
-		  <p>
-		  	<%= f.radio_button(:rsvp, true, {:class => "rsvp_yes"}) %>
-			<%= label_tag(:rsvp_yes, "I will be attending!") %>
-			<%= f.radio_button(:rsvp, false, {:class => "rsvp_no"}) %>
-			<%= label_tag(:rsvp_no, "Sorry. I can't make it.") %>
-		  </p>
-
-
-		 <p id='form_food'>
-			<%= f.radio_button(:food, "beef") %>
-			<%= label_tag(:foo_beef, "I want beef") %>
-			<%= f.radio_button(:food, "chicken") %>
-			<%= label_tag(:food_chicken, "I want chicken") %>
-			<%= f.radio_button(:food, "fish") %>
-			<%= label_tag(:food_fish, "I want fish") %>
-		  </p>
-
-		  <p>
-		    <%= f.submit %>
-		  </p>
 		<% end %>
+
+		<div id="form_error">
+			<h1>You were invited right? Try again &#2047 </h1>
+		</div>
+
+		<div id="form_response">
+
+			<div id="form_rsvp">
+					<%= form_for :guest, url: guests_path do |f| %>
+				  <p>
+				    <%= f.label :first_name %>
+				    <%= f.text_field :first_name , :class => 'name_txt_fields' %>
+				 
+				    <%= f.label :last_name %>
+				    <%= f.text_field :last_name , :class => 'name_txt_fields' %>
+				  </p>
+
+				  <p>
+				  	<%= f.radio_button(:rsvp, true, {:class => "rsvp_yes"}) %>
+					<%= label_tag(:rsvp_yes, "I will be attending!") %>
+					<%= f.radio_button(:rsvp, false, {:class => "rsvp_no"}) %>
+					<%= label_tag(:rsvp_no, "Sorry. I can't make it.") %>
+				  </p>
+
+
+				 <p id='form_food'>
+					<%= f.radio_button(:food, "beef") %>
+					<%= label_tag(:foo_beef, "I want beef") %>
+					<%= f.radio_button(:food, "chicken") %>
+					<%= label_tag(:food_chicken, "I want chicken") %>
+					<%= f.radio_button(:food, "fish") %>
+					<%= label_tag(:food_fish, "I want fish") %>
+				  </p>
+
+				  <p>
+				    <%= f.submit 'RSVP', :class => 'rsvp_submit' %>
+				  </p>
+				<% end %>
+			</div>
+
+			
+
+		</div>
+
 	</div>
 
-	
-
 </div>
+
+
+
 
 <%= javascript_include_tag "wedding" %>
