--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -19,15 +19,12 @@
 
     <%= f.radio_button(:rsvp, true, {:class => 'rsvp_edit_yes'}) %>
   <%= label_tag(:rsvp_yes, "I will be attending!") %>
-  <%= f.radio_button(:rsvp, false) %>
-  <%= label_tag(:rsvp_no, "Sorry. I can't make it.", {:class => 'rsvp_edit_no'}) %>
+  <%= f.radio_button(:rsvp, false, {:class => 'rsvp_edit_nay'}) %>
+  <%= label_tag(:rsvp_no, "Sorry. I can't make it.") %>
   </p>
  
-  <% if(@guest.rsvp == true) %>
-  <p id='edit_food' style='display:block'>
-    <% else %>
-  <p id='edit_food' style='display:none'>
-    <% end %>
+ <% dis = @guest.rsvp == true ? 'block' : 'none' %>
+  <p id='edit_food' style="display: <%= dis %>">
   <%= f.radio_button(:food, "beef") %>
   <%= label_tag(:foo_beef, "I want beef") %>
   <%= f.radio_button(:food, "chicken") %>
@@ -43,6 +40,18 @@
   </div>
   </div>
 </div>
+
+<script type="text/javascript">
+  $(".rsvp_edit_yes").on("change", function(){
+  $('#edit_food').css('display', 'block')
+});
+
+$(".rsvp_edit_nay").on("change", function(){
+  $('#edit_food').css('display', 'none')
+});
+
+
+</script>
 
  
 
