--- a/app/assets/stylesheets/wedding.css
+++ b/app/assets/stylesheets/wedding.css
@@ -427,13 +427,13 @@
 }
 
 #code_form {
-	width: 50%;
 	height: 100px;
 	position: absolute;
 	left: 0;
 	right: 0;
 	top: 50%;
 	margin: -50px auto 0;
+	text-align: center;
 }
 
 .code_submit, .rsvp_submit, .rsvp_update {
