--- a/app/views/welcome/logistics.html.erb
+++ b/app/views/welcome/logistics.html.erb
@@ -3,7 +3,48 @@
 <%= link_to 'home', controller: 'welcome', action: 'index' %>
 </div>
 
-<div id="logistics" style="border: 1px solid transparent;">
-<h1>Logistics</h1>
+
+<div class="circle_container" >
+	<div class='circle' style="left: 0">
+		<div class='circle2' id='innerpic' style="left: 0;">
+			<div class="circle_text">
+				<p>
+					<span style='font-family: "Rokkitt", serif; font-size: 1.4em;text-shadow: 1px 1px black; '>KINDLY JOIN US <br>
+					FOR THE WEDDING OF</span><br>
+					<h1>BEN</h1><br>
+						<span style="font-family: cursive; font-weight: bolder; font-size: 3em; position: absolute; left:0; right:0; top: 115px;">and</span><br>
+						<h1>NICOLE</h1><br>
+					<h4 style='font-family: "Rokkitt", serif; font-size: 1.4em;text-shadow: 1px 1px black; margin-top: 0px;'>JUNE 20, 2015 AT 5:00PM IN THE EVENING</h4>
+					<h5 style='font-family: cursive; font-size: 1.4em;text-shadow: 1px 1px black; '>at the talega golf club</h5>
+
+				</p>
+				
+			</div>
+		</div>	
+	</div>
+
+	<div class='circle' style="right: 0">
+		<div class='circle2' style="right: 0; z-index: 8;">
+			<div class="circle_text" >
+				<h2 style="border-bottom: 3px solid black; width: 50%;position: absolute; left:0; right:0; top: 50px; margin: 0 auto; font-size: 2em;text-shadow: 1px 1px #191970;">Wedding Details</h2>
+				<h2 style=' margin-top: 125px;font-family: cursive'>Ceremony is at <br>5:00pm <br>with reception to follow</h2>
+
+				<h2 style="font-family: 'Rokkitt', serif;">
+					Talega Golf Club<br>
+					990 Avenida Talega<br>
+					San Clemente, CA 92673<br>
+				</h2>
+				<p id='tal_link' style="height: 40px; line-height: 40px;">
+					<%= link_to 'Directions', 'http://www.talegagolfclub.com/contact-and-press.html' %>
+				</p>
+				<h3>We are registered at 
+					<a href="http://www1.macys.com/registry/wedding/guest/?registryid=6262686" style='text-decoration: none	; color: #191970'>Macy's</a><br>
+					but would also appreciate Costco giftcards.
+				</h3>
+			</div>
+		</div>
+	</div>
+
 </div>
 
+<div ></div>
