--- a/app/views/welcome/logistics.html.erb
+++ b/app/views/welcome/logistics.html.erb
@@ -38,7 +38,7 @@
 					<%= link_to 'Directions', 'http://www.talegagolfclub.com/contact-and-press.html' %>
 				</p>
 				<h3>We are registered at 
-					<a href="http://www1.macys.com/registry/wedding/guest/?registryid=6262686" style='text-decoration: none	; color: #191970'>Macy's</a><br>
+					<a href="http://www1.macys.com/registry/wedding/guest/?registryId=6262686" style='text-decoration: none	; color: #191970'>Macy's</a><br>
 					but would also appreciate Costco giftcards.
 				</h3>
 			</div>
