--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -42,7 +42,7 @@
 				  </p>
 
 
-				 <p id='form_food' style='border: none; height: 40px; line-height: 45px;'>
+				 <p id='form_food' style='height: 40px; line-height: 45px;'>
 					<%= f.radio_button(:food, "beef") %>
 					<%= label_tag(:foo_beef, "I want beef") %>
 					<%= f.radio_button(:food, "chicken") %>
