--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -66,6 +66,14 @@
 </div>
 
 
+<script type="text/javascript">
+	$(".rsvp_yes").on("change", function(){
+  $('#form_food').css('display', 'block')
+});
 
+$(".rsvp_no").on("change", function(){
+  $('#form_food').css('display', 'none')
+});
+</script>
 
 <%= javascript_include_tag "wedding" %>
