--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,3 +14,14 @@
  *= require_self
  *= wedding.css
  */
+
+@font-face {
+  font-family: "Waltograph";
+  src: font-url( asset-path("waltographUI.eot") );
+  src: font-url( asset-path("waltographUI.eot?#iefix") ) format("embedded-opentype"),
+       font-url( asset-path("waltographUI.woff") ) format("woff"),
+       font-url( asset-path("waltographUI.ttf") ) format("truetype"),
+       font-url( asset-path("waltographUI.svg#fontcustom") ) format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
