--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -7,8 +7,8 @@
 <div id="enter_code">
 
 	<div class="form">
-		<h1>Enter the Code on the back of the Save the Date card to RSVP</h1>
 		<%= form_tag('/guests/code_check', id: 'code_form') do %>
+		<h1 style="margin-top:-50px">Enter the Code on the back of the Save the Date card to RSVP</h1>
 			
 			<p>
 		    Super Secret Password:
@@ -64,7 +64,6 @@
 	</div>
 
 </div>
-
 
 <script type="text/javascript">
 	$(".rsvp_yes").on("change", function(){
