--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -17,11 +17,11 @@
 
 @font-face {
   font-family: "Waltograph";
-  src: font-url( asset-path("waltographui-webfont.eot") );
-  src: font-url( asset-path("waltographui-webfont.eot?#iefix") ) format("embedded-opentype"),
-       font-url( asset-path("waltographui-webfont.woff") ) format("woff"),
-       font-url( asset-path("waltographui-webfont.ttf") ) format("truetype"),
-       font-url( asset-path("waltographui-webfont.svg#fontcustom") ) format("svg");
+  src: url(<%= font_path("waltographui-webfont.eot") %> );
+  src: url(<%= font_path("waltographui-webfont.eot?#iefix") %> ) format("embedded-opentype"),
+       url(<%= font_path("waltographui-webfont.woff") %> ) format("woff"),
+       url(<%= font_path("waltographui-webfont.ttf") %> ) format("truetype"),
+       url(<%= font_path("waltographui-webfont.svg#fontcustom") %> ) format("svg");
   font-weight: normal;
   font-style: normal;
 }
