--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -15,13 +15,24 @@
  *= wedding.css
  */
 
-@font-face {
+/*@font-face {
   font-family: "Waltograph";
   src: url(<%= font_path("waltographui-webfont.eot") %> );
   src: url(<%= font_path("waltographui-webfont.eot?#iefix") %> ) format("embedded-opentype"),
        url(<%= font_path("waltographui-webfont.woff") %> ) format("woff"),
        url(<%= font_path("waltographui-webfont.ttf") %> ) format("truetype"),
        url(<%= font_path("waltographui-webfont.svg#fontcustom") %> ) format("svg");
+  font-weight: normal;
+  font-style: normal;
+}*/
+
+@font-face {
+  font-family: "Waltograph";
+  src: url(<%= font_path("waltograph42-webfont.eot") %> );
+  src: url(<%= font_path("waltograph42-webfont.eot?#iefix") %> ) format("embedded-opentype"),
+       url(<%= font_path("waltograph42-webfont.woff") %> ) format("woff"),
+       url(<%= font_path("waltograph42-webfont.ttf") %> ) format("truetype"),
+       url(<%= font_path("waltograph42-webfont.svg#fontcustom") %> ) format("svg");
   font-weight: normal;
   font-style: normal;
 }
