adds more another font file

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -15,8 +15,8 @@
  *= wedding.css
  */
 
-/*@font-face {
-  font-family: "Waltograph";
+@font-face {
+  font-family: "WaltographUi";
   src: url(<%= font_path("waltographui-webfont.eot") %> );
   src: url(<%= font_path("waltographui-webfont.eot?#iefix") %> ) format("embedded-opentype"),
        url(<%= font_path("waltographui-webfont.woff") %> ) format("woff"),
@@ -24,7 +24,7 @@
        url(<%= font_path("waltographui-webfont.svg#fontcustom") %> ) format("svg");
   font-weight: normal;
   font-style: normal;
-}*/
+}
 
 @font-face {
   font-family: "Waltograph";
